open source countdown update 1. remove open source countdown page 2. show open source countdown on index 3. fix some layout & display bugs

--- a/index.html
+++ b/index.html
@@ -1,34 +1,35 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <meta name="description" content="NKN is the new kind of network connectivity protocol & ecosystem powered by blockchain for an open, decentralized, and shared Internet.">
 
-    <title>NKN</title>
-    <link rel="shortcut icon" href="static/img/favicon.ico"/>
+  <title>NKN</title>
+  <link rel="shortcut icon" href="static/img/favicon.ico"/>
 
-    <link rel="stylesheet" href="static/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/static/css/bootstrap-3.3.7.min.css">
+  <link rel="stylesheet" href="static/css/font-awesome.min.css">
+  <link rel="stylesheet" href="/static/css/bootstrap-3.3.7.min.css">
 
-    <!--<script src="static/config/default-config.json"></script>-->
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-120066183-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-    <script src="static/js/jquery-3.2.1.slim.min.js"></script>
-    <script src="static/js/bootstrap-3.37.min.js"></script>
+    gtag('config', 'UA-120066183-1');
+  </script>
 
-    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  <!--<script src="static/config/default-config.json"></script>-->
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-119165267-1"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+  <script src="static/js/jquery-3.2.1.slim.min.js"></script>
+  <script src="static/js/bootstrap-3.37.min.js"></script>
 
-      gtag('config', 'UA-119165267-1');
-    </script>
-    <script id="for-email-rec" src=""></script>
-  </head>
-  <body>
-    <div id="app"></div>
-  </body>
+  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  <script id="for-email-rec" src=""></script>
+</head>
+<body>
+<div id="app"></div>
+</body>
 </html>
